# lightshot-we-deserve

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  package.json
.github/workflows/: build.yml
public/: design.css  index.html
scripts/: gen-icon.mjs
src/: border.css  border.html  index.html  overlay.css  overlay.html  overlay.js  recorder.css  recorder.html  recorder.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
